--- a/CryptoChrome/_locales/en/messages.json
+++ b/CryptoChrome/_locales/en/messages.json
@@ -28,7 +28,7 @@
     "description": "Error message, displayed when failing to set incognito proxy settings."
   },
   "successfullySetProxy": {
-    "message": "Your proxy settings have been saved successfully; this window will close automagically. Have a nice day!",
+    "message": "Your proxy settings have been saved successfully; this window will close by itself. Have a nice day!",
     "description": "Success message, displayed after proxy settings have been written."
   },
   "errorPopupTitle": {
